syntax= "proto3";
package com.github.fabriciolfj.proto;

option java_package = "com.github.fabriciolfj.proto";
option java_multiple_files = true;

message ProductReviewRequest {
  string code = 1;
}

message ProductReviewResponse {
  string message = 1;
  int64 rate = 2;
  string date = 3;
}

service ProductReviewService {
  rpc find(ProductReviewRequest) returns (ProductReviewResponse);
}